# fast-pager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/design/: 00-overview.md  01-developer-experience.md  02-type-and-operator-system.md  03-architecture.md  04-backend-roadmap.md  05-roadmap-and-release.md
scripts/: release.sh
src/fast_pager/: __init__.py
tests/: test_package.py
