[project]
name = "fast-pager"
version = "0.0.1"
description = "Automatic filterable, sortable, paginated query parameters for FastAPI, derived from your Pydantic models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

authors = [
    { name = "Eytan Ohana" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["fastapi", "pagination", "filtering", "sorting", "pydantic", "mongodb"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
]

[project.urls]
Homepage = "https://github.com/eytanohana/fast-pager"
Repository = "https://github.com/eytanohana/fast-pager"
Issues = "https://github.com/eytanohana/fast-pager/issues"

[build-system]
requires = ["uv_build>=0.9.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
